--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <title>Document</title>
   </head>
   <body>
-    <header id="header"></header>
+    <header id="header">
+      <img
+        src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
+        alt="alternatetext"
+        id="header-img"
+      />
+      <nav id="nav-bar">
+        <a
+          class="nav-link"
+          href="https://product-landing-page.freecodecamp.rocks/#features"
+          >Features</a
+        >
+        |
+        <a
+          class="nav-link"
+          href="https://product-landing-page.freecodecamp.rocks/#how-it-works"
+          >How It Works</a
+        >
+        |
+        <a
+          class="nav-link"
+          href="https://product-landing-page.freecodecamp.rocks/#pricing"
+          >Pricing</a
+        >
+      </nav>
+    </header>
   </body>
 </html>
