--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Original Trombones</title>
   </head>
   <body>
     <header id="header">
@@ -33,5 +33,20 @@
         >
       </nav>
     </header>
+    <h2>Handcrafted, home-made masterpieces</h2>
+    <form>
+      <input
+        type="email"
+        id="email"
+        name="fname"
+        placeholder="Enter your email address"
+      /><br />
+    </form>
+    <iframe
+      width="420"
+      height="345"
+      src="https://www.youtube.com/embed/y8Yv4pnO7qc"
+    >
+    </iframe>
   </body>
 </html>
